--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graphql",
-  "version": "0.1.0",
-  "private": true,
+  "version": "2019.0.1",
+  "private": false,
   "dependencies": {
     "bootstrap": "^4.3.1",
     "css-loader": "^2.1.0",
@@ -19,8 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && gh-pages -d build"
   },
+  "homepage": "https://graphqlconf.com.br",
   "eslintConfig": {
     "extends": "react-app"
   },
